# test-tui

./: .gitignore  Cargo.toml  README.md  watchlist.txt
data/: watchlist.txt
data/market/: gen.sh
routines/: Cargo.toml
routines/src/: lib.rs  watchlist.rs
src/: app_controller.rs  app_layout.rs  app_menu.rs  app_ui.rs  commands.rs  help.rs  main.rs  status.rs  table.rs  test_view.rs  watchlist.rs
