[workspace]
members = ["routines"]


[package]
name = "test-tui"
version = "0.1.0"
edition = "2021"
default-run = "test-tui"


[dependencies]
chrono = "0.4"
log = "0.4.22"
routines = { path = "./routines" }
grid-component = { path = "../grid-component" }


[dependencies.cursive]
version = "0.21"
default-features = false
features = ["crossterm-backend"]
